finish write swagger
