# schemas/cardSchemas.js
@@ -1,0 +1,13 @@
+import Joi from 'joi';
+import moment from 'moment';
+
+export const dateCardSchema = Joi.object({
+  deadline: Joi.string().custom((value, helpers) => {
+    if (!moment(value, 'DD.MM.YYYY', true).isValid()) {
+      return helpers.error('any.invalid', {
+        message: 'Invalid date format. Use DD.MM.YYYY',
+      });
+    }
+    return value;
+  }),
+});
